--- a/Labtt2/templates/demo/central.html
+++ b/Labtt2/templates/demo/central.html
@@ -82,7 +82,7 @@
 <br>
 <div class="d-flex justify-content-around mb-3">
   <div class="p-2">
-    <form class="form" action="{% url 'add' %}" method="post">
+    <form class="form" action="{% url 'add' %}" method="GET">
       {% csrf_token %}
         <button type="submit" class="btn btn-primary" name="button">ADD NEW LAB</button>
     </form>
