--- a/Labtt2/templates/demo/select.html
+++ b/Labtt2/templates/demo/select.html
@@ -86,6 +86,7 @@
   </div>
 </div>
 <br>
+{% if user.is_authenticated %}
 <div class="d-flex justify-content-around mb-3">
   <div class="p-2">
     <form class="form" action="{% url 'update' form.id %}" method="post">
@@ -101,5 +102,6 @@
         </form>
   </div>
 </div>
-
+{% else %}
+{% endif %}
 {% endblock %}
