--- a/Labtt2/templates/demo/registered.html
+++ b/Labtt2/templates/demo/registered.html
@@ -6,7 +6,7 @@
 		<br>
 		<h3> Registration Successful </h3>
     <br>
-   <a href="{% url 'lg' %}" class="btn btn-primary mb-2">Login with other account</a>
+   <a href="{% url 'lg' %}" class="btn btn-success mb-2">Login with other account</a>
 	 <br>
 	 <a href="{% url 'hme' %}">Go to home page</a>
 	 <br>
