--- a/Labtt2/static/css/styles.css
+++ b/Labtt2/static/css/styles.css
@@ -5,7 +5,7 @@
 .fontstyle
 {
 font-family: 'Joti One', cursive;
-  color: #0e49b5!important;
+  /*color: #0e49b5!important;*/
   font-size: 20px;
 }
 .navbar-brand{
