--- a/Labtt2/templates/demo/central.html
+++ b/Labtt2/templates/demo/central.html
@@ -4,10 +4,10 @@
 {% block content %}
 <div class="container-fluid .mt-5">
   <div class="mx-auto">
-    <div class="table-responsive table-primary" >
+    <div class="table-responsive table-success" >
     <table class="table" style="text-align:center">
     <thead>
-      <tr class="bg-primary .color-white">
+      <tr class="bg-success .color-white">
         <th scope="col" >S.No</th>
         <th scope="col" >Name Of the Lab</th>
         <th scope="col">No. Of Systems</th>
@@ -24,7 +24,7 @@
         {% endif %}
 
       </tr>
-      <tr class="bg-primary .color-white">
+      <tr class="bg-success .color-white">
         <th scope="col" colspan="3"></th>
         <th scope="col">AM</th>
         <th scope="col">PM</th>
@@ -48,9 +48,9 @@
     </thead>
     <tbody>
       {% for form in forms %}
-      <tr class="table-primary">
-        <th scope="row" class="bg-primary">{{forloop.counter}}</th>
-        <td><a href="{% url 'slct' form.id %}" class="fontstyle">{{form.lab_name}}</a></td>
+      <tr class="table-success">
+        <th scope="row" class="bg-success">{{forloop.counter}}</th>
+        <td><a href="{% url 'slct' form.id %}" class="fontstyle"><span class="text-success">{{form.lab_name}}</span></a></td>
         <td>{{form.systems}}</td>
         <td>{{form.monm}}</td>
         <td>{{form.mone}}</td>
@@ -69,7 +69,7 @@
           <div class="p-2">
             <form class="form" action="{% url 'update' form.id %}" method="post">
               {% csrf_token %}
-                <button type="submit" class="btn btn-primary" name="upbtn">UPDATE</button>
+                <button type="submit" class="btn btn-success" name="upbtn">UPDATE</button>
             </form>
           </div>
         </td>
@@ -77,7 +77,7 @@
           <div class="p-2">
             <form class="form" action="{% url 'delete' form.id %}" method="post">
               {% csrf_token %}
-              <button type="submit" class="btn btn-primary" name="dltbtn">DELETE</button>
+              <button type="submit" class="btn btn-success" name="dltbtn">DELETE</button>
             </form>
             </div>
         </td>
@@ -97,7 +97,7 @@
   <div class="p-2">
     <form class="form" action="{% url 'add' %}" method="GET">
       {% csrf_token %}
-        <button type="submit" class="btn btn-primary" name="button">ADD NEW LAB</button>
+        <button type="submit" class="btn btn-success" name="button">ADD NEW LAB</button>
     </form>
   </div>
 </div>
