--- a/Labtt2/templates/demo/home.html
+++ b/Labtt2/templates/demo/home.html
@@ -2,12 +2,13 @@
 {% block title %} Home {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-5">
   {% for form in forms %}
-  <div class="jumbotron col-md-6 mx-auto mt-5 bg-primary" style="text-align:center">
 
-    <h2 ><a href="{% url 'slct' form.id %}" class="color-white">{{form.lab_name}}</a></h2>
-
+  <div class=" col-md-6 mx-auto" style="text-align:center">
+    <div class="alert alert-light" role="alert">
+      <h4><a href="{% url 'slct' form.id %}" class="text-success">{{form.lab_name}}</a></h4>
+    </div>
   </div>
   {% endfor %}
 </div>
