--- a/Labtt2/templates/demo/logout.html
+++ b/Labtt2/templates/demo/logout.html
@@ -2,12 +2,12 @@
 {% block title %} Logout {% endblock %}
 {% block content %}
 <div class="container">
-	<div class="card col-md-6 mx-auto mt-5" style="text-align:center">
+	<div class="card col-md-6 mx-auto mt-5 shadow-lg" style="text-align:center">
 		<br>
 		<h3> Successfully Logged Out </h3>
 
     <br>
-   <a href="{% url 'lg' %}" class="btn btn-primary mb-2">Login again</a>
+   <a href="{% url 'lg' %}" class="btn btn-success mb-2">Login again</a>
 	 <br>
 	 <a href="{% url 'hme' %}">Go to home page</a>
 	 <br>
