--- a/Labtt2/templates/demo/navbar.html
+++ b/Labtt2/templates/demo/navbar.html
@@ -1,7 +1,7 @@
 
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light text-success" style="background-color: #dbf6e9;">
   <!-- Brand/logo -->
-  <a class="navbar-brand fontstyle" href="{% url 'hme' %}">LabTimeTable</a>
+  <a class="navbar-brand fontstyle text-success" href="{% url 'hme' %}"><span class="text-success">LabTimeTable<span></a>
 
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
@@ -11,7 +11,7 @@
   <ul class="navbar-nav fontstyle">
   {% if user.is_authenticated %}
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'cntrl' %}">CENTRAL TIME TABLE</a>
+      <a class="nav-link " href="{% url 'cntrl' %}">CENTRAL TIME TABLE</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{% url 'add' %}">ADD NEW LAB</a>
@@ -19,26 +19,32 @@
     <li class="nav-item">
       <a class="nav-link" href="{% url 'ug' %}">REGISTER</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'search' %}">AVAILABILITY</a>
+    </li>
     {% else %}
     <li class="nav-item">
       <a class="nav-link" href="{% url 'cntrl' %}">CENTRAL TIME TABLE</a>
     </li>
-
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'search' %}">AVAILABILITY</a>
+    </li>
     {% endif %}
+
   </ul>
   <ul class="navbar-nav ml-auto" style="margin-right:110px;">
       {% if not user.is_authenticated %}
       <li class="nav-item">
         <form class="" action="{% url 'lg' %}" method="post">
           {% csrf_token %}
-          <button type="submit" class="btn btn-primary" name="button">LOGIN</button>
+          <button type="submit" class="btn btn-success" name="button">LOGIN</button>
         </form>
       </li>
       {% else %}
       <li class="nav-item">
         <form class="" action="{% url 'lgo' %}" method="post">
           {% csrf_token %}
-          <button type="submit" class="btn btn-primary" name="button">LOGOUT</button>
+          <button type="submit" class="btn btn-success" name="button">LOGOUT</button>
         </form>
       </li>
       {% endif %}
