--- a/Labtt2/static/css/styles.css
+++ b/Labtt2/static/css/styles.css
@@ -4,9 +4,10 @@
 }
 .fontstyle
 {
-font-family: 'Joti One', cursive;
-  /*color: #0e49b5!important;*/
+/*font-family: 'Joti One', cursive;
+  color: #0e49b5!important;*/
   font-size: 20px;
+  font-weight: bold;
 }
 .navbar-brand{
   font-size: 26px;
