--- a/Labtt2/templates/demo/navbar.html
+++ b/Labtt2/templates/demo/navbar.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light text-success" style="background-color: #dbf6e9;">
   <!-- Brand/logo -->
-  <a class="navbar-brand fontstyle text-success" href="{% url 'hme' %}"><span class="text-success">LabTimeTable<span></a>
+  <a class="navbar-brand fontstyle text-success" href="{% url 'hme' %}"><span class="text-success">LAB TIMETABLE<span></a>
 
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
@@ -11,7 +11,7 @@
   <ul class="navbar-nav fontstyle">
   {% if user.is_authenticated %}
     <li class="nav-item">
-      <a class="nav-link " href="{% url 'cntrl' %}">CENTRAL TIME TABLE</a>
+      <a class="nav-link " href="{% url 'cntrl' %}">CENTRAL TIMETABLE</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{% url 'add' %}">ADD NEW LAB</a>
@@ -24,7 +24,7 @@
     </li>
     {% else %}
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'cntrl' %}">CENTRAL TIME TABLE</a>
+      <a class="nav-link" href="{% url 'cntrl' %}">CENTRAL TIMETABLE</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{% url 'search' %}">AVAILABILITY</a>
